--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input,
+select,
+textarea {
+  min-height: 35px !important;
+  border: 1px solid #b9b9b9 !important;
+  width: 100% !important;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border: 1px solid #6a6a6a !important;
+}
+
+button {
+  height: 35px !important;
+  box-shadow: none !important;
+}
+
+table {
+  border: 1px solid #f0f0f0;
+}
+
+a:hover {
+  color: #61ab36;
+}
+
+.max-width {
+  max-width: 20px !important;
+}
+
+.no-outline, .no-outline:focus {
+  outline: none !important;
+  border: none !important;
 }
